--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-
-
+  <link rel="shortcut icon" href="favicon.ico">
   <title>Nuflow</title>
 </head>
 
 <body>
   <div id="root"></div>
 </body>
+<script src="/bundle.js"></script>
 
 </html>
