--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="favicon.ico">
+  <link rel="stylesheet" href="../src/style/app.css">
+  <link rel="stylesheet" href="../src/style/material-icons.css">
   <title>Nuflow</title>
 </head>
 
