--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="favicon.ico">
-  <link rel="stylesheet" href="../src/style/app.css">
-  <link rel="stylesheet" href="../src/style/material-icons.css">
+  <link rel="stylesheet" type="text/css" href="style/app.css">
+  <link rel="stylesheet" type="text/css" href="style/material-icons.css">
+  <link rel="stylesheet" type="text/css" href="style/material.blue-indigo.min.css">
   <title>Nuflow</title>
 </head>
 
@@ -14,5 +15,6 @@
   <div id="root"></div>
 </body>
 <script src="/bundle.js"></script>
+<script src="/style/material.min.js"></script>
 
 </html>
